--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <link href='http://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
 <link href='http://localhost:3000/images/favicon.png' rel='icon' type='image/png'>
 <title>Welcome to Rails JSKit</title>
-<link href="/stylesheets/all-27a182b5.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/all-8695bf09.css" rel="stylesheet" type="text/css" />
 </head>
 <body class='index'>
 <header id='header'><div class='navigation-wrapper'>
 <a class='logo' href='/'>
-<img src="/images/logo-white-145f779b.png" />
+<img src="images/logo-white-145f779b.png" />
 </a>
 <a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
 <nav role='navigation'>
@@ -37,7 +37,7 @@
 </header>
 <section id='content'>
 <div class='centered'>
-<h1 class='project-name'><img src="/images/logo-2859ed4d.png" /></h1>
+<h1 class='project-name'><img src="images/logo-2859ed4d.png" /></h1>
 <h1 class='tagline'>
 A framework for writing testable,
 <strong>lightweight</strong>
@@ -131,6 +131,6 @@ Issues
 <footer id='footer'>
 <div class='centered'></div>
 </footer>
-<script src="/javascripts/all-7c8580ca.js" type="text/javascript"></script>
+<script src="javascripts/all-7c8580ca.js" type="text/javascript"></script>
 </body>
 </html>
