--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <a href="/">Home</a>
 </li>
 <li class='nav-link'>
-<a href="/about.html">About</a>
+<a href="about.html">About</a>
 </li>
 <li class='nav-link'>
-<a href="/documentation.html">Documentation</a>
+<a href="documentation.html">Documentation</a>
 </li>
 <li class='nav-link'>
 <a href="javascript:void(0);">API</a>
