Update relative links

--- a/about.html
+++ b/about.html
@@ -10,21 +10,18 @@
 </head>
 <body class='about'>
 <header id='header'><div class='navigation-wrapper'>
-<a class="logo" href="https://daytonn.github.io/rails_jskit"><img src="/images/logo-white-145f779b.png" />
+<a class="logo" href="/"><img src="/images/logo-white-145f779b.png" />
 </a><a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
 <nav role='navigation'>
 <ul class='navigation-menu show' id='js-navigation-menu'>
 <li class='nav-link'>
-<a href="https://daytonn.github.io/rails_jskit">Home</a>
+<a href="/">Home</a>
 </li>
 <li class='nav-link'>
 <a href="/about.html">About</a>
 </li>
 <li class='nav-link'>
 <a href="/documentation.html">Documentation</a>
-</li>
-<li class='nav-link'>
-<a href="javascript:void(0);">API</a>
 </li>
 <li class='nav-link'>
 <a href="https://github.com/daytonn/rails_jskit/issues">Community</a>
