--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h1 class='tagline'>
 A framework for writing testable,
 <strong>lightweight</strong>
-javascript in your Rails application.
+JavaScript in your Rails application.
 </h1>
 <div class='github-buttons'>
 <a class="button" href="https://github.com/daytonn/rails_jskit">Github
@@ -50,12 +50,12 @@ javascript in your Rails application.
 </a></div>
 <div class='unframework'>
 <h2>The UnFramework</h2>
-<p>As dumb as it is for me to have created yet another javascript framework, I contend that JSkit fits in the sweet spot between jQuery soup and full blown fat-client, single-page-app framework. The goal of JSkit is to be a simple, easy-to-use structure for when you need solid, testable JavaScript without the overhead of trying to solve harder problems.</p>
+<p>As dumb as it is for me to have created yet another JavaScript framework, I contend that JSkit fits in the sweet spot between jQuery soup and full blown fat-client, single-page-app framework. The goal of JSkit is to be a simple, easy-to-use structure for when you need solid, testable JavaScript without the overhead of trying to solve harder problems.</p>
 </div>
 <div class='features'>
 <div class='why-jskit'>
 <h2>Why Rails JSKit?</h2>
-<p>Rails JSKit takes the guesswork out of how to structure the javascript in your Rails app. It also provides a simple way to write javascript that's easy to read, write, and test. No more dumping blobs of javascript into templates or grabbing magic global data available to your scripts.</p>
+<p>Rails JSKit takes the guesswork out of how to structure the JavaScript in your Rails app. It also provides a simple way to write JavaScript that's easy to read, write, and test. No more dumping blobs of JavaScript into templates or grabbing magic global data available to your scripts.</p>
 </div>
 <div class='lightweight'>
 <h2>Lightweight</h2>
@@ -63,7 +63,7 @@ javascript in your Rails application.
 </div>
 <div class='decoupled'>
 <h2>Decoupled Coordination</h2>
-<p>Rails JSKit uses an event system to provide a minimal seam between your Rails app and the client-side code. JSKit controllers map 1-to-1 to Rails controllers, allowing you to coordinate execution of javascript at key points in the response cycle. Seamlessly pass data to your JSKit controllers directly from your Rails controllers, avoiding global variables dumped into templates.</p>
+<p>Rails JSKit uses an event system to provide a minimal seam between your Rails app and the client-side code. JSKit controllers map 1-to-1 to Rails controllers, allowing you to coordinate execution of JavaScript at key points in the response cycle. Seamlessly pass data to your JSKit controllers directly from your Rails controllers, avoiding global variables dumped into templates.</p>
 </div>
 </div>
 
