--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <link href='http://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
 <link href='http://localhost:3000/images/favicon.png' rel='icon' type='image/png'>
 <title>Welcome to Rails JSKit</title>
-<link href="/stylesheets/all-20c7afc7.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
 <body class='index'>
 <header id='header'><div class='navigation-wrapper'>
-<a class="logo" href="/"><img src="/images/logo-white-145f779b.png" />
+<a class="logo" href="/"><img src="images/logo-white.png" />
 </a><a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
 <nav role='navigation'>
 <ul class='navigation-menu show' id='js-navigation-menu'>
@@ -32,7 +32,7 @@
 </header>
 <section id='content'>
 <div class='centered'>
-<h1 class='project-name'><img src="/images/logo-2859ed4d.png" /></h1>
+<h1 class='project-name'><img src="images/logo.png" /></h1>
 <h1 class='tagline'>
 A framework for writing testable,
 <strong>lightweight</strong>
@@ -72,6 +72,6 @@ JavaScript in your Rails application.
 <footer id='footer'>
 <div class='centered'></div>
 </footer>
-<script src="/javascripts/all-7c8580ca.js" type="text/javascript"></script>
+<script src="javascripts/all.js" type="text/javascript"></script>
 </body>
 </html>
