--- a/documentation.html
+++ b/documentation.html
@@ -6,11 +6,11 @@
 <link href='http://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
 <link href='http://localhost:3000/images/favicon.png' rel='icon' type='image/png'>
 <title>Rails JSKit</title>
-<link href="/stylesheets/all.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
 <body class='documentation'>
 <header id='header'><div class='navigation-wrapper'>
-<a class="logo" href="/"><img src="/images/logo-white.png" />
+<a class="logo" href="/"><img src="images/logo-white.png" />
 </a><a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
 <nav role='navigation'>
 <ul class='navigation-menu show' id='js-navigation-menu'>
@@ -199,6 +199,6 @@ You're ready to use RailsJskit.
 <footer id='footer'>
 <div class='centered'></div>
 </footer>
-<script src="/javascripts/all.js" type="text/javascript"></script>
+<script src="javascripts/all.js" type="text/javascript"></script>
 </body>
 </html>
