--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'>
 <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
 <link href='http://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
-<link href='http://localhost:3000/images/favicon.png' rel='icon' type='image/png'>
+<link href='/images/favicon.png' rel='icon' type='image/png'>
 <title>Welcome to Rails JSKit</title>
 <link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
@@ -18,10 +18,10 @@
 <a href="/">Home</a>
 </li>
 <li class='nav-link'>
-<a href="/about.html">About</a>
+<a href="about.html">About</a>
 </li>
 <li class='nav-link'>
-<a href="/documentation.html">Documentation</a>
+<a href="documentation.html">Documentation</a>
 </li>
 <li class='nav-link'>
 <a href="https://github.com/daytonn/rails_jskit/issues">Community</a>
@@ -45,7 +45,7 @@ JavaScript in your Rails application.
 <i class='fa fa-download'></i>
 </a><a class="button issues" href="https://github.com/daytonn/rails_jskit/issues">Issues
 <i class='fa fa-exclamation-triangle'></i>
-</a><a class="button get-started" href="/documentation.html">Get Started
+</a><a class="button get-started" href="documentation.html">Get Started
 <i class='fa fa-play'></i>
 </a></div>
 <div class='unframework'>
