--- a/documentation.html
+++ b/documentation.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'>
 <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
 <link href='http://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
-<link href='http://localhost:3000/images/favicon.png' rel='icon' type='image/png'>
+<link href='/images/favicon.png' rel='icon' type='image/png'>
 <title>Rails JSKit</title>
 <link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
@@ -18,10 +18,10 @@
 <a href="/">Home</a>
 </li>
 <li class='nav-link'>
-<a href="/about.html">About</a>
+<a href="about.html">About</a>
 </li>
 <li class='nav-link'>
-<a href="/documentation.html">Documentation</a>
+<a href="documentation.html">Documentation</a>
 </li>
 <li class='nav-link'>
 <a href="https://github.com/daytonn/rails_jskit/issues">Community</a>
