--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body class='index'>
 <header id='header'><div class='navigation-wrapper'>
-<a class="logo" href="/"><img src="images/logo-white.png" />
+<a class="logo" href="https://daytonn.github.io/rails_jskit/"><img src="images/logo-white.png" />
 </a><a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
 <nav role='navigation'>
 <ul class='navigation-menu show' id='js-navigation-menu'>
 <li class='nav-link'>
-<a href="/">Home</a>
+<a href="https://daytonn.github.io/rails_jskit/">Home</a>
 </li>
 <li class='nav-link'>
 <a href="about.html">About</a>
