--- a/index.html
+++ b/index.html
@@ -6,27 +6,22 @@
 <link href='http://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
 <link href='http://localhost:3000/images/favicon.png' rel='icon' type='image/png'>
 <title>Welcome to Rails JSKit</title>
-<link href="stylesheets/all-8695bf09.css" rel="stylesheet" type="text/css" />
+<link href="/stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
 <body class='index'>
 <header id='header'><div class='navigation-wrapper'>
-<a class='logo' href='/'>
-<img src="images/logo-white-145f779b.png" />
-</a>
-<a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
+<a class="logo" href="/"><img src="/images/logo-white.png" />
+</a><a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
 <nav role='navigation'>
 <ul class='navigation-menu show' id='js-navigation-menu'>
 <li class='nav-link'>
 <a href="/">Home</a>
 </li>
 <li class='nav-link'>
-<a href="about.html">About</a>
+<a href="/about.html">About</a>
 </li>
 <li class='nav-link'>
-<a href="documentation.html">Documentation</a>
-</li>
-<li class='nav-link'>
-<a href="javascript:void(0);">API</a>
+<a href="/documentation.html">Documentation</a>
 </li>
 <li class='nav-link'>
 <a href="https://github.com/daytonn/rails_jskit/issues">Community</a>
@@ -37,100 +32,46 @@
 </header>
 <section id='content'>
 <div class='centered'>
-<h1 class='project-name'><img src="images/logo-2859ed4d.png" /></h1>
+<h1 class='project-name'><img src="/images/logo.png" /></h1>
 <h1 class='tagline'>
 A framework for writing testable,
 <strong>lightweight</strong>
-javascript in your Rails application.
+JavaScript in your Rails application.
 </h1>
 <div class='github-buttons'>
-<a class="button" href="https://github.com/daytonn/rails_jskit"><i class='fa fa-github'></i>
-Github
-</a><a class="button download" href="https://github.com/daytonn/rails_jskit/releases"><i class='fa fa-download'></i>
-Releases
-</a><a class="button issues" href="https://github.com/daytonn/rails_jskit/issues"><i class='fa fa-exclamation-triangle'></i>
-Issues
+<a class="button" href="https://github.com/daytonn/rails_jskit">Github
+<i class='fa fa-github'></i>
+</a><a class="button download" href="https://github.com/daytonn/rails_jskit/releases">Releases
+<i class='fa fa-download'></i>
+</a><a class="button issues" href="https://github.com/daytonn/rails_jskit/issues">Issues
+<i class='fa fa-exclamation-triangle'></i>
+</a><a class="button get-started" href="/documentation.html">Get Started
+<i class='fa fa-play'></i>
 </a></div>
+<div class='unframework'>
+<h2>The UnFramework</h2>
+<p>As dumb as it is for me to have created yet another JavaScript framework, I contend that JSkit fits in the sweet spot between jQuery soup and full blown fat-client, single-page-app framework. The goal of JSkit is to be a simple, easy-to-use structure for when you need solid, testable JavaScript without the overhead of trying to solve harder problems.</p>
+</div>
 <div class='features'>
 <div class='why-jskit'>
 <h2>Why Rails JSKit?</h2>
-<p>Rails JSKit takes the guesswork out of how to structure the javascript in your Rails app. It also provides a simple way to write javascript that's easy to read, write, and test. No more dumping blobs of javascript into templates or grabbing magic global data available to your scripts.</p>
+<p>Rails JSKit takes the guesswork out of how to structure the JavaScript in your Rails app. It also provides a simple way to write JavaScript that's easy to read, write, and test. No more dumping blobs of JavaScript into templates or grabbing magic global data available to your scripts.</p>
 </div>
 <div class='lightweight'>
 <h2>Lightweight</h2>
-<p>At 7kb completely uncompressed and under 250 lines of code in total, JSKit is an extremely lightweight framework. Not only lightweight in size JSKit aims to provide a basic structure and nothing more. JSKit sets you up for success, however you choose to build your application.</p>
+<p>At under 250 lines of code in total (minus comments), JSKit is an extremely lightweight framework. Not only lightweight in size, JSKit aims to provide a basic structure and nothing more. JSKit sets you up for success, however you choose to build your application.</p>
 </div>
 <div class='decoupled'>
 <h2>Decoupled Coordination</h2>
-<p>Rails JSKit uses an event system to provide a minimal seam between your Rails app and the client-side code. JSKit controllers map 1 to 1 to Rails controllers, allowing you to coordinate execution of javascript at key points in the response cycle. Seamlessly pass data to your JSKit controllers directly from your Rails controllers, avoiding global variables dumped into templates.</p>
+<p>Rails JSKit uses an event system to provide a minimal seam between your Rails app and the client-side code. JSKit controllers map 1-to-1 to Rails controllers, allowing you to coordinate execution of JavaScript at key points in the response cycle. Seamlessly pass data to your JSKit controllers directly from your Rails controllers, avoiding global variables dumped into templates.</p>
 </div>
 </div>
-<!-- .basics -->
-<!-- %h2 The Basics -->
-<!-- %ul.tabs -->
-<!-- %li.tab-header-and-content -->
-<!-- = link_to "application_controller.rb", "javascript:void(0);", class: "tab is-active" -->
-<!-- .tab-content -->
-<!-- :code -->
-<!-- # lang: ruby -->
-<!-- class ApplicationController < ApplicationController -->
-<!-- before_action :application_payload -->
-<!-- def application_payload -->
-<!-- set_app_payload(current_user) -->
-<!-- end -->
-<!-- end -->
-<!-- %li.tab-header-and-content -->
-<!-- = link_to "application_controller.js", "javascript:void(0);", class: "tab" -->
-<!-- .tab-content -->
-<!-- :code -->
-<!-- # lang: js -->
-<!-- App.createController("Application", { -->
-<!-- elements: { -->
-<!-- all: { -->
-<!-- notifications: "#notifications" -->
-<!-- } -->
-<!-- }, -->
-<!-- events: { -->
-<!-- all: { -->
-<!-- notifications: { click: "fadeOutNotifications" } -->
-<!-- } -->
-<!-- }, -->
-<!-- notificationFadeDelay: 3000, -->
-<!-- all: function(currentUser) { -->
-<!-- App.currentUser = currentUser; -->
-<!-- setTimeout(this.fadeOutNotifications, this.notificationFadeDelay); -->
-<!-- }, -->
-<!-- fadeOutNotifications: function() { -->
-<!-- this.$notifications.fadeOut(); -->
-<!-- } -->
-<!-- }); -->
-<!-- %li.tab-header-and-content -->
-<!-- = link_to "application.html.haml", "javascript:void(0);", class: "tab" -->
-<!-- .tab-content -->
-<!-- :code -->
-<!-- # lang: haml -->
-<!-- !!! -->
-<!-- %html -->
-<!-- %head -->
-<!-- %title Rails App -->
-<!-- = csrf_meta_tags -->
-<!-- = stylesheet_link_tag "application", media: "all" -->
-<!-- %body -->
-<!-- - if notice || alert -->
-<!-- #notifications -->
-<!-- - if notice -->
-<!-- .notice= notice -->
-<!-- - if alert -->
-<!-- .alert= alert -->
-<!-- = yield -->
-<!-- = javascript_include_tag "application" -->
-<!-- = jskit -->
 
 </div>
 </section>
 <footer id='footer'>
 <div class='centered'></div>
 </footer>
-<script src="javascripts/all-7c8580ca.js" type="text/javascript"></script>
+<script src="/javascripts/all.js" type="text/javascript"></script>
 </body>
 </html>
