--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
 <meta charset='utf-8'>
 <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
 <link href='http://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
-<link href='/images/favicon.png' rel='icon' type='image/png'>
+<link href='http://localhost:3000/images/favicon.png' rel='icon' type='image/png'>
 <title>Welcome to Rails JSKit</title>
-<link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
+<link href="/stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
 <body class='index'>
 <header id='header'><div class='navigation-wrapper'>
-<a class="logo" href="https://daytonn.github.io/rails_jskit/"><img src="images/logo-white.png" />
+<a class="logo" href="/"><img src="/images/logo-white.png" />
 </a><a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
 <nav role='navigation'>
 <ul class='navigation-menu show' id='js-navigation-menu'>
 <li class='nav-link'>
-<a href="https://daytonn.github.io/rails_jskit/">Home</a>
+<a href="/">Home</a>
 </li>
 <li class='nav-link'>
-<a href="about.html">About</a>
+<a href="/about.html">About</a>
 </li>
 <li class='nav-link'>
-<a href="documentation.html">Documentation</a>
+<a href="/documentation.html">Documentation</a>
 </li>
 <li class='nav-link'>
-<a href="https://github.com/daytonn/rails_jskit">Source</a>
+<a href="https://github.com/daytonn/rails_jskit/issues">Community</a>
 </li>
 </ul>
 </nav>
@@ -32,7 +32,7 @@
 </header>
 <section id='content'>
 <div class='centered'>
-<h1 class='project-name'><img src="images/logo.png" /></h1>
+<h1 class='project-name'><img src="/images/logo.png" /></h1>
 <h1 class='tagline'>
 A framework for writing testable,
 <strong>lightweight</strong>
@@ -45,7 +45,7 @@ JavaScript in your Rails application.
 <i class='fa fa-download'></i>
 </a><a class="button issues" href="https://github.com/daytonn/rails_jskit/issues">Issues
 <i class='fa fa-exclamation-triangle'></i>
-</a><a class="button get-started" href="documentation.html">Get Started
+</a><a class="button get-started" href="/documentation.html">Get Started
 <i class='fa fa-play'></i>
 </a></div>
 <div class='unframework'>
@@ -72,6 +72,6 @@ JavaScript in your Rails application.
 <footer id='footer'>
 <div class='centered'></div>
 </footer>
-<script src="javascripts/all.js" type="text/javascript"></script>
+<script src="/javascripts/all.js" type="text/javascript"></script>
 </body>
 </html>
