--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <a href="/rails_jskit/documentation.html">Documentation</a>
 </li>
 <li class='nav-link'>
-<a href="https://github.com/daytonn/rails_jskit/issues">Community</a>
+<a href="https://github.com/daytonn/rails_jskit">Source</a>
 </li>
 </ul>
 </nav>
