--- a/index.html
+++ b/index.html
@@ -4,28 +4,20 @@
 <meta charset='utf-8'>
 <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
 <link href='http://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
-<link href='http://localhost:3000/images/favicon.png' rel='icon' type='image/png'>
+<link href='/images/favicon.png' rel='icon' type='image/png'>
 <title>Welcome to Rails JSKit</title>
 <link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
 <body class='index'>
 <header id='header'><div class='navigation-wrapper'>
-<a class="logo" href="/rails_jskit"><img src="images/logo-white.png" />
+<a class="logo" href="https://daytonn.github.io/rails_jskit/"><img src="images/logo-white.png" />
 </a><a class='navigation-menu-button' href='javascript:void(0)' id='js-mobile-menu'>MENU</a>
 <nav role='navigation'>
 <ul class='navigation-menu show' id='js-navigation-menu'>
-<li class='nav-link'>
-<a href="/rails_jskit">Home</a>
-</li>
-<li class='nav-link'>
-<a href="/rails_jskit/about.html">About</a>
-</li>
-<li class='nav-link'>
-<a href="/rails_jskit/documentation.html">Documentation</a>
-</li>
-<li class='nav-link'>
-<a href="https://github.com/daytonn/rails_jskit">Source</a>
-</li>
+<li class='nav-link'><a href="https://daytonn.github.io/rails_jskit/">Home</a></li>
+<li class='nav-link'><a href="/rails_jskit/about.html">About</a></li>
+<li class='nav-link'><a href="/rails_jskit/documentation.html">Documentation</a></li>
+<li class='nav-link'><a href="https://github.com/daytonn/rails_jskit">Source</a></li>
 </ul>
 </nav>
 </div>
@@ -45,7 +37,7 @@ JavaScript in your Rails application.
 <i class='fa fa-download'></i>
 </a><a class="button issues" href="https://github.com/daytonn/rails_jskit/issues">Issues
 <i class='fa fa-exclamation-triangle'></i>
-</a><a class="button get-started" href="/documentation.html">Get Started
+</a><a class="button get-started" href="documentation.html">Get Started
 <i class='fa fa-play'></i>
 </a></div>
 <div class='unframework'>
